Fix vertical spacing above/below line separating kind sig from type decl

--- a/app/static/pursuit.less
+++ b/app/static/pursuit.less
@@ -485,11 +485,12 @@ ol li {
   border-radius: 0;
   border-top: 1px solid darken(@background, 20%);
   border-bottom: 1px solid darken(@background, 20%);
-  padding: 0.328em 0;
+  padding: 0;
 }
 
 .decl__signature code {
   display: block;
+  padding: 0.328em 0;
   padding-left: 2.441em;
   text-indent: -2.441em;
   white-space: normal;
